# SwipeAPI

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  celerybeat-schedule  main.py  pyproject.toml  requirements.txt  server.py  worker.py
alembic/: env.py  script.py.mako
alembic/versions/: 05c17c582bb5_users_admins_models.py  0780a5a36f6c_fix_unique_contsraints_for_complex_id_.py  123232cefddd_add_to_complex_requests.py  22355b49b311_change_precision_for_apartment.py  3cae8040645d_announcement_remove_redundant_fields.py  660b06b9ef65_remove_is_approved_field_for_.py  6f7bd1e06095_create_favourite_complex_model.py  74d390042f99_create_complexes_table.py  74d5be4c46bf_make_fields_in_filters_optional.py  7529bb547824_add_users_models.py  793afa539812_add_notary_and_black_list.py  845986296c7f_add_users_models.py  90bde85bcc5a_change_user_id_type_for_blacklist.py  91fdec767e72_add_users_models.py  9d7c04355a18_add_contact_agent_contact_subsription_.py  a13c08b2fa71_init.py  a21cac6abfce_add_on_delete_rule_for_blacklist_user_.py  a55d64db48e1_add_unique_constraint_on_complex_id_and_.py  a94066a57ee3_add_order_to_gallery_images.py  b27f8a0096bd_init.py  b77848f63cd7_in_contact_model_made_first_name_and_.py  c30214ddcfcc_add_apartments.py  c8bfc993ce57_create_block_section_floor_riser.py  d68322991b1a_change_precision_for_apartment.py  dca1d9076fa1_init.py  e7994834176c_fix.py
cli/: __main__.py  contstants.py  ioc_container.py  schemas.py
cli/commands/: __init__.py  clear.py  create.py
cli/faker_utils/: __init__.py  clear_records.py  contstants.py  create_announcements.py  create_apartments.py  create_builders.py  create_notaries.py  create_records.py  create_users.py  faker_instance.py  generate_records.py  generate_users.py  media_utils.py
cli/utils/: __init__.py  admin.py  announcements.py  apartments.py  builders.py  faker.py  media.py  notaries.py  users.py
config/: __init__.py  base.py  broker.py  celery.py  db.py  email.py  in_memory_db.py  jwt.py  redis.py  server.py  signing.py
deploy/beat/: Dockerfile
deploy/nginx/: Dockerfile  nginx.conf
deploy/server/: Dockerfile
deploy/worker/: Dockerfile
src/: app.py
src/admin/: ioc.py  models.py  services.py
src/admin/endpoints/: __init__.py  admin.py  blacklist.py  notaries.py  profile.py
src/admin/models/: __init__.py  blacklist.py  notary.py
src/admin/repositories/: __init__.py  blacklist.py  notary.py
src/admins/: ioc.py  models.py  repositories.py  schemas.py  services.py
src/announcements/: constants.py  enums.py  exceptions.py  ioc.py  tasks.py
src/apartments/: enums.py  ioc.py
src/auth/: dependencies.py  enums.py  exceptions.py  ioc.py  schemas.py  services.py  tasks.py  utils.py
src/builder/: enums.py  ioc.py
src/builders/: enums.py  ioc.py
src/buildings/: ioc.py
src/core/: celery_app.py  config.py  constants.py  enums.py  errors.py  exception_handlers.py  exceptions.py  ioc.py  models.py  schemas.py  storage_backend.py
src/notaries/: ioc.py  repositories.py  schemas.py  services.py
src/requests/: dependencies.py  ioc.py  models.py  repositories.py  schemas.py  services.py
src/user/: constants.py  exceptions.py  ioc.py  tasks.py
src/users/: constants.py  dependencies.py  endpoints.py  enums.py  exceptions.py  ioc.py  models.py  repositories.py  schemas.py  services.py  tasks.py
(+440 files in other folders)
