[project]
name = "swipeapi"
version = "0.1.0"
description = ""
authors = [
    {name = "ant100pshnik",email = "mypochtav@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)", # REST API WEB framework
    "sqlalchemy (>=2.0.40,<3.0.0)", # ORM
    "pydantic[email] (>=2.11.4,<3.0.0)", # Schema validator
    "advanced-alchemy (>=1.4.2,<2.0.0)", # Companion library for SQLAlchemy
    "asyncpg (>=0.30.0,<0.31.0)", # Asyncrounous postgres driver
    "redis (>=6.0.0,<7.0.0)", # Message broker
    "celery (>=5.5.2,<6.0.0)", # Worker for background tasks
    "jinja2 (>=3.1.6,<4.0.0)", # Template engine for E-Mail messages
    "dishka (>=1.5.3,<2.0.0)", # DI framework
    "pyjwt (>=2.10.1,<3.0.0)", # Creating JWT tokens
    "uvicorn (>=0.34.2,<0.35.0)", # ASGI web server
    "python-dotenv (>=1.1.0,<2.0.0)", # Loading variables for .env files
    "psycopg2-binary (>=2.9.10,<3.0.0)", # Syncronous postgres driver
    "bcrypt (>=4.3.0,<5.0.0)", # Password hashing
    "python-multipart (>=0.0.20,<0.0.21)", # For forms with files support
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
