[project]
name = "swipeapi"
version = "0.1.0"
description = ""
authors = [
    {name = "ant100pshnik",email = "mypochtav@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "pydantic[email] (>=2.11.4,<3.0.0)",
    "advanced-alchemy (>=1.4.2,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "redis (>=6.0.0,<7.0.0)",
    "celery (>=5.5.2,<6.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "dishka (>=1.5.3,<2.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "python-multipart (==0.0.20)",
    "fastapi-mail (>=1.5.0,<2.0.0)",
    "itsdangerous (>=2.2.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.12"
mypy = "^1.16.0"
pre-commit = "^4.2.0"
